1879
In trunk, the error is now:

{code}
test/pending/pos/t1974.scala:4: error: value -> is not a member of Class[_]
  def addToMap(c : Class[_], s : String) = map += (c -> s)
                                                     ^
{code}

It seems that ``any2ArrowAssoc`` in ``Predef`` is not applicable in that case. ``->`` is normally available on classes:

{code}
scala> this.getClass -> 4
res2: (java.lang.Class[?0], Int) forSome { type ?0 } = (class ,4)
{code}
